--- a/gallery.html
+++ b/gallery.html
@@ -167,23 +167,49 @@
 
             <div class="gallery-category" id="certifications">
                 <h2>Certifications</h2>
-                <div class="cert-card">
-    <h3>Malaysia Skills Diploma (SKM) – Level 4</h3>
-    <p>NOSS: Pentadbiran Rangkaian Komputer [IT-030-4:2013]</p>
-    <ul>
-        <li>Server Configuration</li>
-        <li>Server Maintenance Administration</li>
-        <li>Computer Network Security Deployment</li>
-        <li>Computer Network Maintenance Management</li>
-        <li>Computer System and Network Procurement</li>
-        <li>Computer System Maintenance Management</li>
-    </ul>
-</div>
-
+                <div class="certification-gallery">
+                   
                     <div class="cert-card">
+                        <h3>Malaysia Skills Diploma (SKM) – Level 4</h3>
+                        <p>NOSS: Pentadbiran Rangkaian Komputer [IT-030-4:2013]</p>
+                            <img src="images/sijilskm.png" alt="Certificate Preview" style="max-width: 200px; width: 100%; border-radius: 8px; margin-top: 1rem;">
+                        </a>
+                        <ul>
+                            <li>Server Configuration</li>
+                            <li>Server Maintenance Administration</li>
+                            <li>Computer Network Security Deployment</li>
+                            <li>Computer Network Maintenance Management</li>
+                            <li>Computer System and Network Procurement</li>
+                            <li>Computer System Maintenance Management</li>
+                        </ul>
+                        <p><a href="images/SIJIL SKM.pdf" target="_blank" class="btn">View Certificate</a></p>
+                        <p><a href="images/Slip Kemahiran Malaysia tahap 4.pdf" target="_blank" class="btn">View Certificate</a></p>
+                    </div>
+
+                     <div class="cert-card">
                         <h3>Vocational Diploma in Computer System And Networking Technology</h3>
                         <p>Kolej Vakasional Gerik</p>
+                        <p>Graduated in 2019</p>
+                        <img src="images/sijil dvm.png" alt="Certificate Preview" style="max-width: 200px; width: 100%; border-radius: 8px; margin-top: 1rem;">
+                        <p> <a href="images/SIJIL DIPLOMA.pdf" target="_blank" class="btn">View Certificate</a></p>
+                        <p><a href="images/TRANSKRIP DVM.pdf" target="_blank" class="btn">View Transcript</a></p>
+                        
                     </div>
+
+                     <div class="cert-card">
+                        <h3>Sijil Vokasional Malaysia</h3>
+                        <p>Kolej Vakasional Gerik - 2017</p>
+                        <img src="images/svm.png" alt="Certificate Preview" style="max-width: 200px; width: 100%; border-radius: 8px; margin-top: 1rem;">
+                        <p> <a href="images/SVM.pdf" target="_blank" class="btn">View Certificate</a></p>
+                    </div>
+
+                     <div class="cert-card">
+                        <h3>Participant: The AI Driven Marketing Revolution</h3>
+                        <p>Universiti Utara Malaysia - 2024</p>
+                        <img src="images/sijilai.png" alt="Certificate Preview" style="max-width: 200px; width: 100%; border-radius: 8px; margin-top: 1rem;">
+                        <p> <a href="images/sijilAI.pdf" target="_blank" class="btn">View Certificate</a></p>
+                    </div>
+
                 </div>
             </div>
         </section>
